--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="notes_app"
+        android:label="My Notes"
         android:name="${applicationName}"
-        android:icon="@mipmap/note">
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher"
+        android:supportsRtl="true"
+    >
         <activity
             android:name=".MainActivity"
             android:exported="true"
